tests/ui/macros/builtin-env-issue-114010.stderr
error: environment variable `oopsie` not defined at compile time
  --> $DIR/builtin-env-issue-114010.rs:3:1
   |
LL | env![r#"oopsie"#];
   | ^^^^^^^^^^^^^^^^^
   |
   = help: use `std::env::var("oopsie")` to read the variable at run time
   = note: this error originates in the macro `env` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

